# wordreference-scraper

./: .gitignore  CHANGELOG.MD  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  example.ipynb  make.bat
src/: wordreference_scraper.py  wordreference_scrapper.py
src/wordreference_scraper/: wordreference_scraper.py
src/wordreference_scrapper.egg-info/: PKG-INFO  SOURCES.txt
test/: multiple_words.html  sections.html  test_wordreference_scraper.py  test_wordreference_scrapper.py  text.html
