[tool.poetry]
name = "wordreference_scraper"
version = "0.0.1"
description = "Scraping words from wordreference.com"
authors = ["Santiago Padron"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
beautifulsoup4 = ">=4.11.1"
requests = ">=2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
