[tool.poetry]
name = "wordreference_scraper"
version = "0.1.1"
description = "Scraping words from wordreference.com"
authors = ["Santiago Padron"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
beautifulsoup4 = ">=4.11.1"
requests = ">=2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"
myst-nb = {version = "^0.16.0", python = "^3.8"}
sphinx-autoapi = "^1.9.0"
sphinx-rtd-theme = "^1.0.0"
python-semantic-release = "^7.31.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"